@@ -3,11 +3,13 @@ package cn.graht.organizeBureau.service.impl;
 
 import cn.graht.common.commons.ErrorCode;
 import cn.graht.common.exception.BusinessException;
+import cn.graht.feignApi.user.UserFeignApi;
 import cn.graht.model.organizeBureau.pojos.UserActivity;
 import cn.graht.model.user.pojos.User;
 import cn.graht.model.user.vos.UserVo;
 import cn.graht.organizeBureau.mapper.UserActivityMapper;
 import cn.graht.organizeBureau.service.UserActivityService;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import jakarta.annotation.Resource;
 import org.springframework.beans.BeanUtils;
@@ -27,17 +29,23 @@ public class UserActivityServiceImpl extends ServiceImpl<UserActivityMapper, Use
 
     @Resource
     private UserActivityMapper userTeamMapper;
+    @Resource
+    private UserFeignApi userFeignApi;
 
     @Override
     public List<UserVo> findUserTeamByTeamId(long teamId) {
         if (teamId < 0) throw new BusinessException(ErrorCode.PARAMS_ERROR);
-        List<User> users  = userTeamMapper.findUserTeamByTeamId(teamId);
-        if (Objects.isNull(users) || users.isEmpty()) throw new BusinessException(ErrorCode.NULL_ERROR);
-        return users.stream().map(user -> {
-            UserVo userVo = new UserVo();
-            BeanUtils.copyProperties(user, userVo);
+        LambdaQueryWrapper<UserActivity> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(UserActivity::getTeamId, teamId);
+        queryWrapper.select(UserActivity::getUserId);
+        List<UserActivity> userActivities = userTeamMapper.selectList(queryWrapper);
+        List<UserVo> users = userActivities.stream().map(userActivity -> {
+            String userId = userActivity.getUserId();
+            UserVo userVo = userFeignApi.getUserInfo(userId).getData();
             return userVo;
-        }).collect(Collectors.toList());
+        }).toList();
+        if (Objects.isNull(users) || users.isEmpty()) throw new BusinessException(ErrorCode.NULL_ERROR);
+        return users;
     }
 
     @Override
